# task

./: .gitignore  CMakeLists.txt  Makefile  README.md  any_scheduler.hpp  any_sender.hpp  coro.cpp  inline_scheduler.hpp  task-demo.cpp  task.hpp  test-any_scheduler.cpp  test-inline_scheduler.cpp  test-thread_scheduler.cpp
